force-app/main/default/objects/Administrator__mdt/fields/Certificacion__c.field-meta.xml
<CustomField>
    <fullName>Certificacion__c</fullName>
    <label>Certificacion</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Administrators</relationshipLabel>
    <relationshipName>Administrators</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>