force-app/main/default/objects/Administrator__mdt/fields/Configuration_and_setup__c.field-meta.xml
<CustomField>
    <fullName>Configuration_and_setup__c</fullName>
    <label>Configuration and setup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>