force-app/main/default/objects/Administrator__mdt/fields/Data_and_analytics_management__c.field-meta.xml
<CustomField>
    <fullName>Data_and_analytics_management__c</fullName>
    <label>Data and analytics management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>