force-app/main/default/objects/Administrator__mdt/fields/Object_Manager_and_Lightning_App_Builder__c.field-meta.xml
<CustomField>
    <fullName>Object_Manager_and_Lightning_App_Builder__c</fullName>
    <label>Object Manager and Lightning App Builder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>