force-app/main/default/objects/Administrator__mdt/fields/Productivity_and_collaboration__c.field-meta.xml
<CustomField>
    <fullName>Productivity_and_collaboration__c</fullName>
    <label>Productivity and collaboration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>