force-app/main/default/objects/Administrator__mdt/fields/Sales_and_marketing_applications__c.field-meta.xml
<CustomField>
    <fullName>Sales_and_marketing_applications__c</fullName>
    <label>Sales and marketing applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>