force-app/main/default/objects/Administrator__mdt/fields/Service_and_support_applications__c.field-meta.xml
<CustomField>
    <fullName>Service_and_support_applications__c</fullName>
    <label>Service and support applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>