force-app/main/default/objects/Administrator__mdt/fields/Workflow_process_automation__c.field-meta.xml
<CustomField>
    <fullName>Workflow_process_automation__c</fullName>
    <label>Workflow/process automation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>